# orchd

./: CONFIG.md  Cargo.toml  LICENSE  ORCHARD.md  ORCHD_OSX.md  README.md  STRESS_TEST_GROUND_0.md  STRESS_TEST_GROUND_0_OSX.md  STRESS_TEST_GROUND_0_XPC.md  justfile
docs/init/: 00-architecture.md  01-types.md  02-runtime-interface.md  03-platform-interface.md  04-systemd-platform.md  05-bare-runtime.md  06-config.md  07-cli.md  08-testing.md  09-phased-delivery.md  10-versioning.md
examples/inception/: .gitignore  Orchfile  README.md  inner-Orchfile  inner-stress-Orchfile  run-test.sh  setup.sh  stress.sh  stress2.sh
orchd-apple/: README.md  build.zig  build.zig.zon
orchd-apple/src/: client.zig  exec_set.zig  main.zig  oci.zig  prepare.zig  types.zig  xpc.zig  xpc_extern.zig
orchd-osx/: build.zig  build.zig.zon  macos.entitlements
orchd-osx/scripts/: sign.sh
orchd-osx/src/: cpio.zig  exec_set.zig  ext4.zig  kernel.zig  main.zig  objc.zig  oci.zig  portfwd.zig  proto.zig  types.zig  vm.zig  vsock.zig  vz.zig
orchd-osx/src/guest/: init.zig
orchd-osx/src/payload/: main.zig
src/: cli.rs  config.rs  engine.rs  exec.rs  main.rs  orchard.rs  orchdi.rs  supervise.rs  types.rs
src/platform/: mod.rs
src/platform/launchd/: generate.rs  lifecycle.rs  mod.rs
src/platform/orchdi/: lifecycle.rs  mod.rs
src/platform/systemd/: generate.rs  lifecycle.rs  mod.rs
src/runtime/: apple.rs  containerd.rs  mod.rs
src/runtime/bare/: mod.rs
src/runtime/containerd/: mod.rs  run.rs
tests/fixtures/: Orchfile
