[package]
name = "orchd"
version = "0.3.1"
edition = "2024"
license = "Apache-2.0"
description = "Execution engine for the Orch specification: turns parsed Orchfile JSON into running, supervised services (systemd/launchd; bare/apple-container runtimes)."
repository = "https://github.com/adiled/orchd"
readme = "README.md"

[dependencies]
orch = { git = "https://github.com/adiled/orch.git", branch = "main" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
libc = "0.2"
base64 = "0.22"

# containerd mode-2 (feature "containerd"): drive containerd's gRPC API in
# process. Optional so the default build stays lean and needs no protoc.
containerd-client = { version = "0.9", optional = true }
tonic = { version = "0.14", default-features = false, features = ["codegen", "channel"], optional = true }
prost-types = { version = "0.14", optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "time", "signal"], optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
anyhow = { version = "1", optional = true }

[features]
default = []
# Compile the in-process containerd backend (pulls tonic/tokio; needs host protoc).
containerd = ["dep:containerd-client", "dep:tonic", "dep:prost-types", "dep:tokio", "dep:sha2", "dep:hex", "dep:anyhow"]
